--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -68,6 +68,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="15dp"
                         android:layout_gravity="center"
+                        android:layoutAnimation="@anim/recycle_layout_animation"
                         />
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
@@ -109,6 +110,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="15dp"
                         android:layout_gravity="center"
+                        android:layoutAnimation="@anim/recycle_layout_animation"
                         />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -152,6 +154,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="15dp"
                         android:layout_gravity="center"
+                        android:layoutAnimation="@anim/recycle_layout_animation"
                         />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -194,6 +197,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="15dp"
                         android:layout_gravity="center"
+                        android:layoutAnimation="@anim/recycle_layout_animation"
                         />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -236,6 +240,7 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="100dp"
                         android:layout_gravity="center"
+                        android:layoutAnimation="@anim/recycle_layout_animation"
                         />
                 </LinearLayout>
             </ScrollView>
