--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -1,52 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.CategoryActivity">
 
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/rounded_rect_white"
-        android:clickable="true"
-        android:elevation="10dp"
-        android:gravity="center"
-        android:src="@drawable/ic_arrow_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+  <ImageButton
+      android:id="@+id/btnBack"
+      android:layout_width="50dp"
+      android:layout_height="50dp"
+      android:layout_marginStart="15dp"
+      android:layout_marginTop="25dp"
+      android:background="@drawable/rounded_rect_white"
+      android:clickable="true"
+      android:elevation="10dp"
+      android:gravity="center"
+      android:src="@drawable/ic_arrow_back"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/lblCategoryName"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:background="@drawable/rounded_rect_white"
-        android:elevation="10dp"
-        android:gravity="center"
-        android:text="Category"
-        android:textAlignment="center"
-        android:textColor="@color/register_bk_color"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnBack"
-        app:layout_constraintTop_toTopOf="parent" />
+  <TextView
+      android:id="@+id/lblCategoryName"
+      android:layout_width="0dp"
+      android:layout_height="50dp"
+      android:layout_marginTop="25dp"
+      android:layout_marginLeft="25dp"
+      android:layout_marginRight="25dp"
+      android:background="@drawable/rounded_rect_white"
+      android:elevation="10dp"
+      android:gravity="center"
+      android:text="Category"
+      android:textAlignment="center"
+      android:textColor="@color/register_bk_color"
+      android:textSize="25dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/btnBack"
+      app:layout_constraintTop_toTopOf="parent" />
 
-    <GridView
-        android:id="@+id/lstProductsByCategory"
+  <LinearLayout
+      android:id="@+id/linearLayout2"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_marginTop="25dp"
+      android:layout_marginBottom="10dp"
+      android:orientation="vertical"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/lblCategoryName">
+
+    <ListView
+        android:id="@+id/lstSubcategoriesByCategory"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblCategoryName" />
+        android:layout_height="match_parent"
+        android:gravity="center" />
+  </LinearLayout>
 
+  <LinearLayout
+      android:id="@+id/data_not_found"
+      android:visibility="invisible"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/linearLayout2"
+      android:orientation="vertical"
+      android:padding="25dp">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:src="@drawable/ic_data_not_found"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Oops!\nSubcategories Not Found!"
+        android:textSize="20dp"
+        android:textColor="@color/register_bk_color"
+        android:gravity="center"/>
+  </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
