--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -1,119 +1,285 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.ProductActivity">
-
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/rounded_rect_white"
-        android:clickable="true"
-        android:elevation="10dp"
-        android:gravity="center"
-        android:src="@drawable/ic_arrow_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/prod"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/rounded_rect_white"
-        android:elevation="10dp"
-        android:gravity="center"
-        android:text="Product"
-        android:textAlignment="center"
-        android:textColor="@color/register_bk_color"
-        android:textSize="25dp"
-        app:layout_constraintEnd_toStartOf="@+id/btnShare"
-        app:layout_constraintStart_toEndOf="@+id/btnBack"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
-        android:id="@+id/btnShare"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/rounded_rect_white"
-        android:clickable="true"
-        android:elevation="10dp"
-        android:gravity="center"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="25dp"
-        android:src="@drawable/ic_share"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imgProduct"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_margin="25dp"
-        android:background="@drawable/rounded_rect_white"
-        android:src="@drawable/prod"
-        app:layout_constraintTop_toBottomOf="@+id/prod"
-        />
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/brcd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:padding="2dp"
-        app:layout_constraintTop_toBottomOf="@+id/imgProduct">
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/rounded_rect_white"
+            android:clickable="true"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:src="@drawable/ic_arrow_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Barcode:"
-            android:textStyle="italic"
-            android:textAlignment="viewStart"
+            android:id="@+id/prod"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/rounded_rect_white"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:text="Product"
+            android:textAlignment="center"
+            android:textColor="@color/register_bk_color"
+            android:textSize="25dp"
+            app:layout_constraintEnd_toStartOf="@+id/btnShare"
+            app:layout_constraintStart_toEndOf="@+id/btnBack"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btnShare"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/rounded_rect_white"
+            android:clickable="true"
+            android:elevation="10dp"
+            android:gravity="center"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="25dp"
+            android:src="@drawable/ic_share"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imgProduct"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_margin="25dp"
+            android:background="@drawable/rounded_rect_white"
+            android:src="@drawable/prod"
+            app:layout_constraintTop_toBottomOf="@+id/prod"
             />
+
+        <LinearLayout
+            android:id="@+id/brcd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:padding="2dp"
+            app:layout_constraintTop_toBottomOf="@+id/imgProduct">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Barcode:"
+                android:textStyle="italic"
+                android:textAlignment="viewStart"
+                />
+            <TextView
+                android:id="@+id/lblBarcode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text="123456789"
+                android:textStyle="italic"
+                android:textAlignment="viewStart"
+                />
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/lblBarcode"
+            android:id="@+id/lblProductName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="123456789"
-            android:textStyle="italic"
-            android:textAlignment="viewStart"
-            />
-    </LinearLayout>
+            android:layout_margin="15dp"
+            android:text="Product Name"
+            android:textAlignment="center"
+            android:textColor="@color/register_bk_color"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toStartOf="@id/lblProductPrice"
+            app:layout_constraintTop_toBottomOf="@id/brcd"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-    <TextView
-        android:id="@+id/lblProductName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:text="Product Name"
-        android:textAlignment="center"
-        android:textColor="@color/register_bk_color"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/brcd"
-        app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+            android:id="@+id/lblProductPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="$9.99"
+            android:textAlignment="center"
+            android:textColor="@color/register_bk_color"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/brcd"
+            app:layout_constraintStart_toEndOf="@id/lblProductName"/>
 
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="15dp"
-        android:background="@drawable/rounded_rect_white"
-        android:gravity="center"
-        android:text="Add To Cart"
-        android:textAlignment="center"
-        android:textColor="@color/register_bk_color"
-        app:layout_constraintTop_toBottomOf="@id/lblProductName"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cont1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            app:layout_constraintTop_toBottomOf="@id/lblProductName"
+            app:layout_constraintStart_toStartOf="parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/cont1"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent=".5">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/topCont1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageButton
+                        android:id="@+id/btnMinus"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:elevation="2dp"
+                        android:layout_marginBottom="11dp"
+                        android:background="@drawable/rounded_rect"
+                        android:backgroundTint="@color/register_bk_color"
+                        android:src="@drawable/ic_remove"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <EditText
+                        android:id="@+id/txtQtt"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:gravity="center"
+                        android:text="1"
+                        android:inputType="number"
+                        android:textColor="@color/register_bk_color"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
+                        app:layout_constraintStart_toEndOf="@+id/btnMinus"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageButton
+                        android:id="@+id/btnPlus"
+                        android:layout_width="0dp"
+                        android:elevation="2dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/rounded_rect"
+                        android:backgroundTint="@color/register_bk_color"
+                        android:src="@drawable/ic_add"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <Button
+                    android:id="@+id/btnAdd"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:background="@drawable/rounded_rect_white"
+                    android:gravity="center"
+                    android:text="Add To Cart"
+                    android:textAlignment="center"
+                    android:textColor="@color/register_bk_color"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/topCont1" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/constraintLayout"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
+
+                <Button
+                    android:id="@+id/btnAddWishlist"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:background="@drawable/rounded_rect_white"
+                    android:text="Add To Wishlist"
+                    android:textAlignment="center"
+                    android:textColor="@color/register_bk_color"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="25dp"
+            android:text="Description"
+            android:textColor="@color/register_bk_color"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cont1" />
+
+        <TextView
+            android:id="@+id/txtDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="25dp"
+            android:text="Description of the product in question. This is the preview of what this might look like for the demo. Line 2 of the description. Description of the product in question. This is the preview of what this might look like for the demo. Line 3 of the description. Description of the product in question. This is the preview of what this might look like for the demo. Line 4 of the description. Description of the product in question. This is the preview of what this might look like for the demo."
+            android:textSize="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="25dp"
+            android:text="More Like This"
+            android:textColor="@color/register_bk_color"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtDescription" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerMoreLikeThis"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="25dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView1" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
