--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -56,7 +56,13 @@
                     android:layout_height="wrap_content"
                     android:animateLayoutChanges="true"
                     android:orientation="vertical">
-
+                    <ListView
+                        android:id="@+id/searchList"
+                        android:layout_width="match_parent"
+                        android:layout_height="300dp"
+                        android:layout_margin="15dp"
+                        android:visibility="gone"
+                        />
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -84,12 +90,13 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
+                            android:id="@+id/btnMostPopular"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="15dp"
                             android:text="@string/more_like_this"
                             android:textAlignment="center"
-                            android:textSize="9sp"
+                            android:textSize="12sp"
                             android:selectAllOnFocus="true"
                             android:linksClickable="true"
                             android:autoLink="all"
@@ -126,6 +133,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
+                            android:id="@+id/btnHotDeals"
                             style="@style/Widget.AppCompat.Button.Borderless.Colored"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -135,7 +143,7 @@
                             android:selectAllOnFocus="true"
                             android:text="@string/more_like_this"
                             android:textAlignment="center"
-                            android:textSize="9sp"
+                            android:textSize="12sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -169,12 +177,13 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
+                            android:id="@+id/btnNewArrivals"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="15dp"
                             android:text="@string/more_like_this"
                             android:textAlignment="center"
-                            android:textSize="9sp"
+                            android:textSize="12sp"
                             android:selectAllOnFocus="true"
                             android:linksClickable="true"
                             android:autoLink="all"
@@ -211,12 +220,13 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
+                            android:id="@+id/btnRecommendedForYou"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="15dp"
                             android:text="@string/more_like_this"
                             android:textAlignment="center"
-                            android:textSize="9sp"
+                            android:textSize="12sp"
                             android:selectAllOnFocus="true"
                             android:linksClickable="true"
                             android:autoLink="all"
